@@ -5,7 +5,7 @@ use warnings;
 use 5.010;
 use utf8;
 
-our $VERSION = '1.21';
+our $VERSION = '1.22';
 
 use Carp   qw(confess cluck);
 use Encode qw(encode);
@@ -640,7 +640,7 @@ Travel::Status::DE::EFA - unofficial EFA departure monitor
 
 =head1 VERSION
 
-version 1.21
+version 1.22
 
 =head1 DESCRIPTION
 
